--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,263 @@
 body {
-    background-color: red;
+    background-color: #f7f5e8;
 }
+
+
+
+
+nav {
+    display: flex;
+    flex-direction: column;
+}
+
+.logo {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    min-height: 80px;
+    border-bottom: 3px solid #f7f5e8;
+    padding-left: 15px;
+    background-color: #ff002f;
+    background-clip: padding-box;
+
+}
+
+img {
+    max-width: 90px;
+    padding-top:2px;
+}
+
+.navigation-links {
+    display: flex;
+}
+
+.navigation-list {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    visibility: hidden;
+    opacity: 0;
+    height: 0;
+    background-color: #ff002f;
+    
+   
+    
+}
+
+.navigation-list .links {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 40px;
+    width: 100%;
+}
+
+.navigation-links a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    color: white;
+    font-size: 16px;
+    font-weight: 700;
+    text-decoration: none;
+    background-color: #ff002f;
+    background-clip: padding-box;
+}
+
+.navigation-links a:hover {
+    color: #021c4a;
+    background-color: #f7f5e8;
+    height:100%;
+    transition: all .2s ease-in-out;
+
+}
+
+.navigation-social {
+    display: none;
+}
+
+.label-toggle {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 2%;
+    top: 18px;
+
+}
+
+span {
+    display: flex;
+    width: 30px;
+    height: 4px;
+    background-color: #f7f5e8;
+    margin-bottom: 3px;
+    margin-top: 3px;
+    border: 1px solid #f7f5e8;
+    border-radius: 3px;
+}
+
+#navigation-toggle {
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    right: 2%;
+    top: 18px;
+    opacity: 0;
+    cursor: pointer;
+    z-index: 2;
+    margin: 0;
+    padding: 0;
+}
+
+
+#navigation-toggle:checked ~ .label-toggle>span {
+    background-color: #021c4a;
+    border-color: #021c4a;
+    transition: all .2s ease;
+   
+}
+
+#navigation-toggle:checked ~ ul {
+    opacity: 1;
+    height: auto;
+    visibility: visible;
+    transition: all .5s ease;
+   
+}
+
+
+@media (min-width: 767px) {
+    .label-toggle {
+        left: 92%;
+    }
+    
+    #navigation-toggle {
+        left: 92%;
+    }
+    
+}
+
+@media (min-width: 769px) {
+    nav {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        padding: 0 20px;
+        height: 80px;
+        background-color: #ff002f;
+    }
+
+    .logo {
+        display: initial;
+        border-bottom: none;
+        padding-left: 0;
+
+    }
+
+    .navigation-links {
+        flex: 6;
+        display: flex;
+        align-items: stretch;
+    }
+
+    .navigation-list {
+        display: flex;
+        flex-flow: row wrap;
+        list-style-type: none;
+        padding: 0 20px;
+        margin: 0;
+        width: 100%;
+        visibility: visible;
+        height:100%;
+        opacity: 1;
+
+    }
+
+    .navigation-list .links {
+        display: flex;
+        align-items: stretch;
+        justify-content: space-around;
+        width: 20%;
+        height: auto;
+    }
+
+    .navigation-list .links a {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        color: white;
+        font-size: 13px;
+        font-weight: 600;
+        text-decoration: none;
+    }
+
+    .navigation-list .links a:hover {
+        color: #021c4a;
+        background-color: #f7f5e8;
+        border-left: 2px dashed #021c4a;
+        border-right: 2px dashed #021c4a;
+        transition: all .2s ease-in-out;
+    }
+
+
+
+
+
+
+    .navigation-social {
+        flex: 2;
+        display: flex;
+        align-items: center;
+        max-width: 200px;
+
+    }
+
+    .navigation-social .navigation-list {
+        padding: 0;
+        justify-content: space-around;
+    }
+
+    .navigation-social .social-links {
+        display: flex;
+        align-items: center;
+    }
+
+    .navigation-social .social-links a {
+        width: 100%;
+        color: white;
+        font-size: 2em;
+        font-weight: 700;
+        text-decoration: none;
+
+    }
+    
+    .navigation-social .social-links a:hover {
+        color: #021c4a;
+        transition: color .2s ease-in-out ;
+
+    }
+
+    img {
+        max-width: 200px;
+    }
+    
+    #navigation-toggle {
+        display: none;
+    }
+    
+    .label-toggle {
+        display: none;
+    }
+
+}
+
+
